# Synth

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Synth.evb
DLLCore/include/nlohmann/detail/conversions/: to_chars.hpp
DLLCore/src/: Input.cpp  Input.h  dllmain.cpp  features.cpp  features.h  language.cpp  language.h  memory.cpp  memory.h  menu.cpp  menu.h
DLLCore/src/features/: Accuracy.cpp  Accuracy.h  Aimbot.cpp  Aimbot.h  Assassination.cpp  Assassination.h  BattlePass.cpp  BattlePass.h  Bones.cpp  Bones.h  BotLobby.cpp  BotLobby.h  ESP.cpp  ESP.h  FastRespawn.cpp  FastRespawn.h  FullCores.cpp  FullCores.h  Fury.cpp  Fury.h  Ghost.cpp  Ghost.h  InfiniteAmmo.cpp  InfiniteAmmo.h  MoveSpeed.cpp  MoveSpeed.h  ObstacleDetection.cpp  ObstacleDetection.h  Players.cpp  Players.h  Radar.cpp  Radar.h  RapidFire.cpp  RapidFire.h  Recoilless.cpp  Recoilless.h  SilentAimbot.cpp  SilentAimbot.h  TeleportToHead.cpp  TeleportToHead.h  (+2 more)
DLLCore/src/fonts/: noto_arabic_font.h
DLLCore/src/languages/: ar_SA.json.h  en_US.json.h  es_ES.json.h  fr_FR.json.h  ja_JP.json.h  ko_KR.json.h  pt_BR.json.h  ru_RU.json.h  zh_CN.json.h  zh_CN_SP.json.h  zh_CN_TR.json.h
DLLCore/src/languages/json/: ar_SA.json  en_US.json  es_ES.json  fr_FR.json  ja_JP.json  ko_KR.json  pt_BR.json  ru_RU.json  zh_CN.json  zh_CN_SP.json  zh_CN_TR.json
DLLCore/src/utils/: SynthUtils.cpp  SynthUtils.h  utils.cpp  utils.h
Injector/src/: InjectorGUI.cpp  InjectorGUI.h  main.cpp
Injector/src/core/: Inject.cpp  Inject.h
Shared/: shared.h
cmake/: GenerateLanguageHeader.cmake
